--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,8 @@ Authors@R: person("Tomasz", "Konopka", , "tokonopka@gmail.com", role = c("aut", 
 Author: Tomasz Konopka <tokonopka@gmail.com>
 Maintainer: Tomasz Konopka <tokonopka@gmail.com>
 Description: Collection of shorthand functions to streamline R code
-Depends: R (>= 3.1.2)
+Depends:
+    R (>= 3.1.2)
 License: MIT + file LICENSE
 LazyData: true
+RoxygenNote: 5.0.1
