--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: shrt
 Title: short R code
-Version: 0.0.0.9000
+Version: 0.0.1.0
 Authors@R: person("Tomasz", "Konopka", , "tokonopka@gmail.com", role = c("aut", "cre"))
-Author: Tomasz Konopka <tokonopka@gmail.com>
+Author: Tomasz Konopka [aut, cre]
 Maintainer: Tomasz Konopka <tokonopka@gmail.com>
-Description: Collection of shorthand functions to streamline R code
+Description: Collection of shorthand functions to streamline R code.
 Depends:
     R (>= 3.1.2)
+Imports:
+    stats,
+    utils
 License: MIT + file LICENSE
 LazyData: true
+Suggests:
+    knitr
+VignetteBuilder: knitr
 RoxygenNote: 5.0.1
