added functions pluck, pluck1, pluck2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(namesV)
 export(newmsg)
 export(newv)
 export(p0)
+export(pluck)
+export(pluck1)
+export(pluck2)
 export(reqvars)
 export(rtht)
 export(setsummary)
