--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(grepv)
 export(initp)
 export(lenu)
 export(load1)
+export(loaddir)
 export(msg)
 export(mtrx)
 export(namesF)
@@ -25,5 +26,6 @@ export(wtht)
 export(x2col)
 export(x2df)
 export(x2hex)
+import(jsonlite)
 import(stats)
 import(utils)
