added experimental functions for cache - savec and rmc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(apio)
 export(apwi)
+export(cache)
 export(grepv)
 export(initp)
 export(lenu)
@@ -20,7 +21,9 @@ export(pluck)
 export(pluck1)
 export(pluck2)
 export(reqvars)
+export(rmc)
 export(rtht)
+export(savec)
 export(setsummary)
 export(wtht)
 export(x2col)
