more on cache, added function today()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,10 @@
 
 export(apio)
 export(apwi)
+export(assignc)
 export(cache)
+export(cachefile)
+export(existsc)
 export(grepv)
 export(initp)
 export(lenu)
@@ -26,6 +29,7 @@ export(rmc)
 export(rtht)
 export(savec)
 export(setsummary)
+export(today)
 export(wtht)
 export(x2col)
 export(x2df)
