--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(cachefile)
 export(catv)
 export(existsc)
 export(grepv)
+export(h1)
+export(h2)
+export(h3)
 export(initp)
 export(lenu)
 export(load1)
