add covr to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# Configuration for travis
+
 language: r
 
 sudo: required
@@ -9,4 +11,8 @@ r-packages:
 
 r_check_args: --no-vignettes --no-build-vignettes
 
+r_github_packages:
+  - r-lib/covr
 
+after_success:
+  - Rscript -e 'covr::codecov()'
