added function cacheprefix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(apwi)
 export(assignc)
 export(cachedir)
 export(cachefile)
+export(cacheprefix)
 export(catv)
 export(existsc)
 export(grepv)
