maintenance, verbose detection, logging during assignc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cachedir)
 export(cachefile)
 export(cacheprefix)
 export(catv)
+export(detect.verbose)
 export(empty)
 export(existsc)
 export(grepv)
