--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: shrt
 Title: short R code
-Version: 0.1.0.1
+Version: 0.1.0.2
 Authors@R: person("Tomasz", "Konopka", , "tokonopka@gmail.com", role = c("aut", "cre"))
 Author: Tomasz Konopka [aut, cre]
 Maintainer: Tomasz Konopka <tokonopka@gmail.com>
 Description: Collection of shorthand functions to streamline R code.
 Depends:
-    R (>= 3.1.2)
+    R (>= 3.1.0)
 Imports:
     jsonlite,
     stats,
@@ -15,6 +15,7 @@ License: MIT + file LICENSE
 LazyData: true
 Suggests:
     knitr,
+    rmarkdown,
     testthat
 VignetteBuilder: knitr
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
