--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(h1)
 export(h2)
 export(h3)
 export(initp)
+export(ji)
 export(lengrep)
 export(lenu)
 export(load1)
@@ -29,6 +30,7 @@ export(namesV)
 export(newmsg)
 export(newv)
 export(nvec)
+export(oi)
 export(p0)
 export(pluck)
 export(pluck1)
